rename package to com.cybersource.inapp from com.visa.webcheckout

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
 <!--    <fragment
         android:id="@+id/full_wallet_confirmation_button_fragment"
-        android:name="com.visa.webcheckout.fragments.WebCheckoutFragment"
+        android:name="com.visa.webcheckout.fragments.encryption.WebCheckoutFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />-->
 
