Added Google Pay functionality.

--- a/src/main/res/layout/fragment_web_checkout.xml
+++ b/src/main/res/layout/fragment_web_checkout.xml
@@ -123,20 +123,21 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_below="@+id/security_layout"
                     android:layout_marginTop="20dp"
                     android:gravity="center_vertical">
 
                     <Button
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/button_checkout_order"
                         android:background="@color/visa_action_golden"
                         android:text="@string/encrypt"
                         android:textColor="@color/white"
                         android:textSize="22sp"
-                        android:layout_weight="1"/>
+                        />
+
                 </LinearLayout>
 
             </RelativeLayout>
