--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="checkout_button_width">300dp</dimen>
     <dimen name="element_space">15dp</dimen>
     <dimen name="separator_width">1dp</dimen>
+    <dimen name="buy_button_width">300dp</dimen>
+    <dimen name="buy_button_height">48sp</dimen>
 </resources>
